RESOLVED FIXED238667
[macOS] The color CSS property value is ignored on <select> elements
https://bugs.webkit.org/show_bug.cgi?id=238667
Summary [macOS] The color CSS property value is ignored on <select> elements
alan
Reported 2022-04-01 09:44:53 PDT
<style> select { color: green; } </style> <select> <option>PASS if this is green.</option> </select>
Attachments
Radar WebKit Bug Importer
Comment 1 2022-04-01 09:45:11 PDT
Tim Nguyen (:ntim)
Comment 2 2022-07-29 20:09:19 PDT
Affects some Interop 2022 containment tests: css/css-contain/contain-size-select-elem-001.html css/css-contain/contain-size-select-elem-002.html
Karl Dubost
Comment 3 2022-07-31 16:24:55 PDT
Starting with ``` data:text/html,<!doctype%20html><title>foo</title><style>%20select%20{%20%20%20color:%20green;%20}%20</style>%20<select>%20%20%20<option>PASS%20if%20this%20is%20green.</option>%20</select> ``` document.getElementsByTagName('select')[0].style.color returns '' window.getComputedStyle(document.getElementsByTagName('select')[0]).getPropertyValue('color') returns 'rgba(0, 0, 0, 0.847)' document.getElementsByTagName('select')[0].style.color = 'green' then document.getElementsByTagName('select')[0].style.color returns 'green' But text is still blackish. Finally let's set document.getElementsByTagName('select')[0].style.border = '1px red dashed' The button takes a dashed red border AND the text becomes green. So it triggered the styling of the button.
Aditya Keerthi
Comment 4 2022-08-01 13:28:29 PDT
Aditya Keerthi
Comment 5 2022-08-01 13:30:11 PDT
(In reply to Karl Dubost from comment #3) > Starting with > > ``` > data:text/html,<!doctype%20html><title>foo</ > title><style>%20select%20{%20%20%20color:%20green;%20}%20</ > style>%20<select>%20%20%20<option>PASS%20if%20this%20is%20green.</ > option>%20</select> > ``` > > document.getElementsByTagName('select')[0].style.color > returns '' > > window.getComputedStyle(document.getElementsByTagName('select')[0]). > getPropertyValue('color') > returns 'rgba(0, 0, 0, 0.847)' > > document.getElementsByTagName('select')[0].style.color = 'green' > then > document.getElementsByTagName('select')[0].style.color > returns 'green' > > But text is still blackish. > > Finally let's set > document.getElementsByTagName('select')[0].style.border = '1px red dashed' > > > The button takes a dashed red border AND the text becomes green. > So it triggered the styling of the button. (it works when specifying a border because the border drops native appearance)
EWS
Comment 6 2022-08-03 08:10:12 PDT
Committed 253074@main (d31184adaa0b): <https://commits.webkit.org/253074@main> Reviewed commits have been landed. Closing PR #2914 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.