Source/WebCore/rendering/RenderThemeMac.mm
@@ -1625,14 +1625,6 @@ void RenderThemeMac::adjustMenuListStyle(RenderStyle& style, const Element* e) c
     // White-space is locked to pre
     style.setWhiteSpace(WhiteSpace::Pre);
 
-    // Set the foreground color to black or gray when we have the aqua look.
-    Color c = Color::darkGray;
-    if (e) {
-        OptionSet<StyleColorOptions> options = e->document().styleColorOptions(&style);
-        c = !e->isDisabledFormControl() ? systemColor(CSSValueButtontext, options) : systemColor(CSSValueGraytext, options);
-    }
-    style.setColor(c);
-
     // Set the button's vertical size.
     setSizeFromFont(style, menuListButtonSizes());
 
